--- a/assignment/index.html
+++ b/assignment/index.html
@@ -9,13 +9,29 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/4.3.7/chai.min.js" integrity="sha512-Pwgr3yHn4Gvztp1GKl0ihhAWLZfqgp4/SbMt4HKW7AymuTQODMCNPE7v1uGapTeOoQQ5Hoz367b4seKpx6j7Zg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- Create and link a CSS file! -->
+  <link rel="stylesheet" href="styles.css" />
+  
+ <header> 
+  <h1>Unit 4, Part 2: HTML/CSS Practice</h1>
+  <p>See console for output. <a href="">Refresh</a> the page to re-run tests.</p>
+</header>
 
-  </head>
+</head>
   <body>
-    <h1>Unit 4, Part 2: HTML/CSS Practice</h1>
-    <p>See console for output. <a href="">Refresh</a> the page to re-run tests.</p>
 
 
+<div class="info"> 
+
+<h2>My name is Gregg</h2>
+
+<img src="https://www.google.com/imgres?q=ford%20escape&imgurl=https%3A%2F%2Fwww.vdm.ford.com%2Fcontent%2Fdam%2Fvdm_ford%2Flive%2Fen_us%2Fford%2Fnameplate%2Fescape%2F2024%2Fcollections%2F3_2%2FEscape_VHP_Billboard_2160x1215.jpg%2F_jcr_content%2Frenditions%2Fcq5dam.web.1440.1440.jpeg&imgrefurl=https%3A%2F%2Fwww.ford.com%2Fsuvs-crossovers%2Fescape%2F2024%2F&docid=r8m-g_0O40AOBM&tbnid=OxXYjQRyLaDLSM&vet=12ahUKEwjb2oPs9pOJAxVtMtAFHZDwFe8QM3oECEAQAA..i&w=1440&h=810&hcb=2&ved=2ahUKEwjb2oPs9pOJAxVtMtAFHZDwFe8QM3oECEAQAA"
+class="fordEscape"/>
+<!--<img src="https://www.google.com/imgres?q=northstar%20train&imgurl=https%3A%2F%2Fimg.apmcdn.org%2F05d6e26c16aeee18fb6564f189832792e24ed480%2Funcropped%2F369de1-20210405-northstar-train-01-600.jpg&imgrefurl=https%3A%2F%2Fwww.mprnews.org%2Fstory%2F2021%2F04%2F07%2Fridership-plunges-on-northstar-line-amid-pandemic-sparking-debate-over-its-future&docid=s7eTbaB6OBG5sM&tbnid=8Zax0Z_EwukcaM&vet=12ahUKEwitm-Hp95OJAxUpMNAFHU4mLvYQM3oECGgQAA..i&w=600&h=400&hcb=2&ved=2ahUKEwitm-Hp95OJAxUpMNAFHU4mLvYQM3oECGgQAA
+" class="train"/>-->
+
+<h3>Most of the time I use my car. Sometimes the train is nice!</h3>
+
+</div>
 
     <!-- Used for automated testing -->
     <div id="mocha"></div>
