--- a/assignment/index.html
+++ b/assignment/index.html
@@ -22,14 +22,13 @@
 
 <div class="info"> 
 
-<h2>My name is Gregg</h2>
+<h2 class="name">My name is Gregg</h2>
+<!--made a class to only affect h2 and not entire body-->
 
-<img src="https://www.google.com/imgres?q=ford%20escape&imgurl=https%3A%2F%2Fwww.vdm.ford.com%2Fcontent%2Fdam%2Fvdm_ford%2Flive%2Fen_us%2Fford%2Fnameplate%2Fescape%2F2024%2Fcollections%2F3_2%2FEscape_VHP_Billboard_2160x1215.jpg%2F_jcr_content%2Frenditions%2Fcq5dam.web.1440.1440.jpeg&imgrefurl=https%3A%2F%2Fwww.ford.com%2Fsuvs-crossovers%2Fescape%2F2024%2F&docid=r8m-g_0O40AOBM&tbnid=OxXYjQRyLaDLSM&vet=12ahUKEwjb2oPs9pOJAxVtMtAFHZDwFe8QM3oECEAQAA..i&w=1440&h=810&hcb=2&ved=2ahUKEwjb2oPs9pOJAxVtMtAFHZDwFe8QM3oECEAQAA"
-class="fordEscape"/>
-<!--<img src="https://www.google.com/imgres?q=northstar%20train&imgurl=https%3A%2F%2Fimg.apmcdn.org%2F05d6e26c16aeee18fb6564f189832792e24ed480%2Funcropped%2F369de1-20210405-northstar-train-01-600.jpg&imgrefurl=https%3A%2F%2Fwww.mprnews.org%2Fstory%2F2021%2F04%2F07%2Fridership-plunges-on-northstar-line-amid-pandemic-sparking-debate-over-its-future&docid=s7eTbaB6OBG5sM&tbnid=8Zax0Z_EwukcaM&vet=12ahUKEwitm-Hp95OJAxUpMNAFHU4mLvYQM3oECGgQAA..i&w=600&h=400&hcb=2&ved=2ahUKEwitm-Hp95OJAxUpMNAFHU4mLvYQM3oECGgQAA
-" class="train"/>-->
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQNU4UEkWHAV33txjDVuI_2Lnh3l1RPJTxqtw&s" class="vehicles"/>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQNHC76vyS5rjPGxZbU9YCNPK9mNyJ-bjlh7A&s" class="vehicles"/>
 
-<h3>Most of the time I use my car. Sometimes the train is nice!</h3>
+<h3>Most of the time I use my car, but sometimes the train is nice!</h3>
 
 </div>
 
