--- a/assignment/index.html
+++ b/assignment/index.html
@@ -25,8 +25,8 @@
 <h2 class="name">My name is Gregg</h2>
 <!--made a class to only affect h2 and not entire body-->
 
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQNU4UEkWHAV33txjDVuI_2Lnh3l1RPJTxqtw&s" class="vehicles"/>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQNHC76vyS5rjPGxZbU9YCNPK9mNyJ-bjlh7A&s" class="vehicles"/>
+<img class="vehicles" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQNU4UEkWHAV33txjDVuI_2Lnh3l1RPJTxqtw&s" />
+<img class="vehicles" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQNHC76vyS5rjPGxZbU9YCNPK9mNyJ-bjlh7A&s" />
 
 <h3>Most of the time I use my car, but sometimes the train is nice!</h3>
 
